# SnapBooks

./: .env.example  .gitignore  ARCHITECTURE-REVIEW.md  E2E-TEST-RESULTS.md  FIREBASE-SETUP.md  INTEGRATION-COMPLETE.md  PROGRESS.md  PYTHON-BACKEND-INTEGRATION.md  README.md  STATUS.md  list-models.js  package-lock.json  package.json  plan.md  prompt.md  start-python-backend.sh  system_prompt.txt  test-adapter.js  test-bot.js  test-e2e.js  test-firebase.js  test-full-pipeline.js  test-gst-pdf.js  test-invoice-preview.html  test-models.js  test-optimized-pipeline.js
BackEnd/: pyproject.toml
BackEnd/src/: config.py  firebase.py  logger.py  models.py
BackEnd/src/agent/: Agent.md  agent.py  chat_utils.py
BackEnd/src/agent/tools/: contacts.py  generate_invoice.py  google_search_agent.py
BackEnd/src/server/: routes_api.py  routes_telegram.py  server.py
frontend/: .env.example  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  page.tsx.backup
frontend/app/customers/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/demo/: page.tsx
frontend/app/invoices/: page.tsx
frontend/app/reports/: page.tsx
frontend/app/settings/: page.tsx
frontend/data/: sample-data.json
frontend/templates/: delivery-challan.html  invoice.html  purchase-order.html
frontend/types/: invoice.ts
src/: api.js  bot.js  firebaseClient.js  geminiClient.js  gstEngine.js  pdfGenerator.js  pipeline.js  schemaAdapter.js  tallyXml.js
templates/: delivery-challan.html  invoice.html  purchase-order.html
(+2 files in other folders)
